# shining-soul-game

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
core/: block_interaction.py  camera.py  debug_controls.py  game.py  game_state.py  input.py  isometric.py  mechanics.py  physics.py  rendering.py  screens.py  voxel_renderer.py  world_grid.py
entities/: __init__.py  models.py
test/: conftest.py  test_block_interaction.py  test_config.py  test_debug_controls.py  test_game_state.py  test_isometric.py  test_loaders.py  test_mechanics.py  test_models.py  test_physics.py  test_rendering.py  test_screens.py  test_voxel_renderer.py  test_world_grid.py
utils/: assets.py  geometry.py  loaders.py
